# multilingual-dubbed-video

./: .editorconfig  .env.example  .gitignore  LICENSE  NOTICE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: release.yml  vieneu-smoke.yml
apps/desktop/: .gitignore  README.md  angular.json  package.json  tsconfig.json
apps/desktop/src/: index.html  main.ts  styles.scss
apps/desktop/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep  README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/dmg/: Open Me First.txt
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  orchestrator_client.rs  sidecar.rs
apps/desktop/src/app/: app.component.ts  app.routes.ts
apps/desktop/src/app/core/: environment.ts
apps/desktop/src/app/core/guards/: first-run.guard.ts
apps/desktop/src/app/core/ipc/: ipc.service.ts  pipeline-events.service.ts  setup-events.service.ts
apps/desktop/src/app/core/models/: index.ts  setup.ts  view-models.ts
apps/desktop/src/app/core/state/: project.store.ts
apps/desktop/src/app/core/util/: format.ts  settings-options.ts
apps/desktop/src/app/screens/editor/: editor.component.html  editor.component.scss  editor.component.ts
apps/desktop/src/app/screens/export/: export.component.html  export.component.scss  export.component.ts
apps/desktop/src/app/screens/home/: home.component.html  home.component.scss  home.component.ts
apps/desktop/src/app/screens/new-project-wizard/: new-project-wizard.component.html  new-project-wizard.component.scss  new-project-wizard.component.ts
apps/desktop/src/app/screens/onboarding/: onboarding.component.html  onboarding.component.scss  onboarding.component.ts
apps/desktop/src/app/screens/processing/: processing.component.html  processing.component.scss  processing.component.ts
apps/desktop/src/app/screens/settings/: settings.component.html  settings.component.scss  settings.component.ts
apps/desktop/src/app/screens/support/: support.component.html  support.component.scss  support.component.ts
apps/desktop/src/app/shared/busy-indicator/: busy-indicator.component.ts
apps/desktop/src/app/shared/confirm-dialog/: confirm-dialog.component.ts  confirm.service.ts
apps/desktop/src/app/shared/download-progress-list/: download-progress-list.component.ts
apps/desktop/src/app/shared/error-banner/: error-banner.component.ts
apps/desktop/src/app/shared/status-badge/: status-badge.component.ts
docs/: APPLE_SIGNING.md  ARCHITECTURE.md  AUTOUPDATE.md  DESKTOP_APP.md  DUBBING_QUALITY.md  ENGINE_PACKS.md  LOCAL_SETUP.md  MODEL_SETUP.md  OMNIVOICE.md  PRODUCTION.md  PROVIDERS.md  RELEASE_NOTES_v0.1.0.md  RELEASING.md  ROADMAP.md  RUN_QUEUE.md  TECH_STACK_RESEARCH.md  TRANSLATION_EVAL.md  TROUBLESHOOTING.md  VIENEU_TTS_SETUP.md  WINDOWS.md
scripts/: clean-build.mjs  dev-workers.ps1  dev-workers.sh  dev.ps1  dev.sh  eval-translation.ts  print-uv-requirements.mjs  setup-local-models.ps1  setup-local-models.sh  start-services.ps1  start-services.sh  start.ps1  start.sh  stop.ps1  stop.sh  verify-environment.ts
scripts/ci/: resolve-release-matrix.py
scripts/package/: build-orchestrator.ps1  build-orchestrator.sh  build-sidecars.ps1  build-sidecars.sh  build-workers.ps1  build-workers.sh  dmg-add-instructions.sh  entry_piper.py  entry_worker.py  fetch-default-models.ps1  fetch-default-models.sh  fetch-ffmpeg.ps1  fetch-ffmpeg.sh  fetch-python.ps1  fetch-python.sh  fetch-uv.ps1  fetch-uv.sh  macos-sign-notarize.sh  merge-latest-json.mjs  orchestrator-entry.mjs  release-macos.sh  release-upload.ps1  release-upload.sh  release-windows.ps1  rthook_stt.py  rthook_translation.py  rthook_tts.py  sea-config.json  stage-engine-src.mjs  stage-engine-src.sh  vd-piper.spec  vd-stt-worker.spec  vd-translation-worker.spec  vd-tts-worker.spec
workers/media-worker/: package.json  tsconfig.json  vitest.config.ts
workers/media-worker/src/: args.test.ts  exec.ts  extract.ts  index.ts  mix.test.ts  mix.ts  probe.ts  prosody.test.ts  render.ts  stretch.ts  subtitles.test.ts  subtitles.ts  tts-timeline.ts  upgrades.test.ts
workers/stt-worker/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
workers/stt-worker/app/: __init__.py  config.py  download_model.py  errors.py  lang.py  main.py  schemas.py  whisper_service.py
workers/stt-worker/tests/: conftest.py  test_health.py  test_models.py  test_schema.py
workers/translation-worker/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
workers/translation-worker/app/: __init__.py  config.py  errors.py  glossary.py  lang.py  main.py  providers.py  schemas.py  translation_service.py
workers/translation-worker/tests/: conftest.py  test_api.py  test_glossary.py  test_lang.py  test_packages.py
workers/tts-engine-neural/: README.md  pyproject.toml
workers/tts-engine-neural/scripts/: smoke_test.py
workers/tts-engine-neural/tests/: test_app.py
workers/tts-engine-neural/vd_tts_engine/: __init__.py  __main__.py  app.py  engine.py  prereqs.py  voices.py  wavio.py
workers/tts-engine-omnivoice/: README.md  pyproject.toml
workers/tts-engine-omnivoice/tests/: conftest.py  test_app.py
workers/tts-engine-omnivoice/vd_omnivoice/: __init__.py  __main__.py  app.py  engine.py  voices.py  wavio.py
workers/tts-worker/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
workers/tts-worker/app/: __init__.py  cache.py  config.py  engines.py  errors.py  lang.py  main.py  schemas.py  tts_service.py  wavutil.py
workers/tts-worker/tests/: conftest.py  test_api.py  test_cache.py  test_engines.py  test_lang.py  test_service.py  test_wavutil.py
