[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videodubber-stt-worker"
version = "0.1.0"
description = "VideoDubber STT worker: local speech-to-text FastAPI service using faster-whisper."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "VideoDubber" }]
keywords = ["speech-to-text", "whisper", "faster-whisper", "fastapi", "subtitles"]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "faster-whisper>=1.0",
  "pydantic>=2",
]

[project.optional-dependencies]
# Dev / test extras. faster-whisper is intentionally NOT required to run the
# unit tests: the whisper service is monkeypatched so tests work fully offline.
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/videodubber/videodubber"

[project.scripts]
# Convenience CLI to pre-cache a model: `videodubber-stt-download --model small`
videodubber-stt-download = "app.download_model:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
