[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videodubber-translation-worker"
version = "0.1.0"
description = "VideoDubber translation worker — local/offline-first FastAPI service backed by Argos Translate (port 5102)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VideoDubber" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "argostranslate>=1.9",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",          # required by fastapi.testclient
]

# Cloud providers are optional/future scaffolds (see app/providers.py).
# Install only if/when you wire them up:
#   pip install ".[cloud]"
cloud = [
  # "deepl>=1.16",
  # "google-cloud-translate>=3.15",
  # "azure-ai-translation-text>=1.0",
  # "openai>=1.30",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
